--- a/ansible/roles/amq-online/defaults/main.yml
+++ b/ansible/roles/amq-online/defaults/main.yml
@@ -1,4 +1,8 @@
 ---
 # defaults file for amq-online
-amqonline_install_url: https://access.redhat.com/node/5005911/423/0/16833831
-amq_online_infra_proj: amq-online-infra
+_amqonline_name: '{{ amqonline_name }}'
+_amqonline_install_url: '{{ amqonline_install_url }}'
+_amqonline_state: '{{ amqonline_state }}'
+_amqonline_infra_proj: '{{ amqonline_infra_proj }}'
+
+
