--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -1,6 +1,16 @@
 ---
 - hosts: localhost
   gather_facts: false
+  connection: local
+  environment:
+    K8S_AUTH_HOST: "https://api.cluster-dbfd.dbfd.sandbox47.opentlc.com:6443"
+    K8S_AUTH_API_KEY: "aVGGS5KA0pDCyCpQkUyqZJEpHW4XS1YuHuhcTRLpbHY"
+    K8S_AUTH_VERIFY_SSL: no
+  vars:
+    amqonline_state: 'present'
+    amqonline_name: 'amq-online-infra'
+    amqonline_install_url: https://access.redhat.com/node/5005911/423/0/16833831
+    amqonline_infra_proj: amq-online-infra
   roles:
    - amq-online
   tasks:
