--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -11,8 +11,18 @@
     amqonline_name: 'amq-online-infra'
     amqonline_install_url: https://access.redhat.com/node/5005911/423/0/16833831
     amqonline_infra_proj: amq-online-infra
+    amqonline_app_messaging_route_url: 'demo-app-messaging.apps.cluster-dbfd.dbfd.sandbox47.opentlc.com'
+    amqonline_app_proj: 'demo-amqonline'
+    amqonline_app_name: 'demo-app'
+    amqonline_app_address_queue_name: 'myqueue'
+    amqonline_app_connection_info_cm: 'messaging-connection-cm'
+    amqonline_app_user_username: 'demo-user'
+    amqonline_app_user_password: cGFzc3dvcmQ= # Base64 encode of 'password'
+    amqonline_app_state: 'present'
   roles:
-   - amq-online
+#   - amq-online
+   - server-certs
+   - amq-online-app
   tasks:
    - debug:
       msg: 'ok'
