--- a/ansible/roles/amq-online/tasks/main.yml
+++ b/ansible/roles/amq-online/tasks/main.yml
@@ -20,7 +20,7 @@
     dest: "{{ installer.path }}"
     remote_src: yes
 
-- name: set "{{ _amqonline_infra_proj }}" namespace to "{{ _amqonline_state }}"
+- name: set {{ _amqonline_infra_proj }} namespace to {{ _amqonline_state }}
   k8s:
     api_version: v1
     kind: Namespace
