--- a/ansible/roles/server-certs/defaults/main.yml
+++ b/ansible/roles/server-certs/defaults/main.yml
@@ -1,12 +1,17 @@
 ---
 # defaults file for server-certs
-dnsname: {{ amqonline_app_messaging_route_url }}
-_tmppath: "/tmp/{{ amqonline_app_name }}/"
-crtpath: "{{ tmppath }}/{{ amqonline_app_name }}.crt"
-pempath: "{{ tmppath }}/{{ amqonline_app_name }}.pem"
-csrpath: "{{ tmppath }}/{{ amqonline_app_name }}.csr"
-pfxpath: "{{ tmppath }}/{{ amqonline_app_name }}.pfx"
-private_key_password: {{ amqonline_app_certificate_private_key_password }}
+_dnsname: '{{ amqonline_app_messaging_route_url }}'
+_organization_name: '{{ amqonline_app_certificate_organization_name }}'
+_organizational_unit_name: '{{ amqonline_app_certificate_organizational_unit_name }}'
+_country_name: '{{ amqonline_app_certificate_country_name }}'
+_tmppath: "{{ amqonline_app_certificate_directory }}"
+_crtpath: "{{ _tmppath }}/{{ amqonline_app_certificate_file_name }}.crt"
+_pempath: "{{ _tmppath }}/{{ amqonline_app_certificate_file_name }}.pem"
+_keypath: "{{ _tmppath }}/{{ amqonline_app_certificate_file_name }}.key"
+_csrpath: "{{ _tmppath }}/{{ amqonline_app_certificate_file_name }}.csr"
+_pfxpath: "{{ _tmppath }}/{{ amqonline_app_certificate_file_name }}.pfx"
+_private_key_password: '{{ amqonline_app_certificate_private_key_password }}'
+_pkcs_password: 'passw0rd'
 
 
 
