--- a/ansible/roles/server-certs/defaults/main.yml
+++ b/ansible/roles/server-certs/defaults/main.yml
@@ -11,7 +11,6 @@ _keypath: "{{ _tmppath }}/{{ amqonline_app_certificate_file_name }}.key"
 _csrpath: "{{ _tmppath }}/{{ amqonline_app_certificate_file_name }}.csr"
 _pfxpath: "{{ _tmppath }}/{{ amqonline_app_certificate_file_name }}.pfx"
 _private_key_password: '{{ amqonline_app_certificate_private_key_password }}'
+_amqonline_app_certificate_copy_to_remote: '{{ amqonline_app_certificate_copy_to_remote }}'
+_amqonline_app_remote_certificate_directory: '{{ amqonline_app_remote_certificate_directory }}'
 _pkcs_password: 'passw0rd'
-
-
-
