--- a/script/demo-ssl-objects_wth_connectors.yaml
+++ b/script/demo-ssl-objects_wth_connectors.yaml
@@ -11,7 +11,7 @@ spec:
   connectors:
   - name: remote
     endpointHosts:
-    - host: messaging-1.apps.cluster-15de.15de.sandbox509.opentlc.com
+    - host: messaging-1.apps.cluster-8656.8656.sandbox114.opentlc.com
       port: 443
     tls:
       caCert:
@@ -41,7 +41,7 @@ spec:
       type: route
       routeServicePort: amqps
       routeTlsTermination: passthrough
-      routeHost: messaging-1.apps.cluster-fb45.fb45.sandbox718.opentlc.com
+      routeHost: messaging-1.apps.cluster-d524.d524.sandbox941.opentlc.com
     cert:
       provider: certBundle
       secretName : server-secret
