Updated with sample run

--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -14,24 +14,18 @@
     amqonline_app_connection_info_cm: 'messaging-connection-cm'
     amqonline_app_user_username: 'demo-user'
     amqonline_app_user_password: cGFzc3dvcmQ= # Base64 encode of 'password'
-    amqonline_app_certificate_directory: '/tmp/{{ amqonline_app_name }}'
+    amqonline_app_certificate_directory: '/tmp/certs'
     # it assume that crt and key file names are same but extensions is .crt & .key
     amqonline_app_certificate_file_name: '{{ amqonline_app_name }}'
-    amqonline_app_certificate_country_name: 'NL'
-    amqonline_app_certificate_organization_name: 'Rechtspraak'
-    amqonline_app_certificate_organizational_unit_name: 'IVO'
-    amqonline_app_certificate_private_key_password: 'passw0rd'
-    amqonline_app_certificate_copy_to_remote: 'no'
     amqonline_app_state: 'present'
     # use in case you want to deploy an app that have addressspace connectors and forwarders.
     amqonline_app_remote_deploy: 'no'
     amqonline_app_remote_messaging_route_url: 'demo-app-messaging.apps.cluster-91f1.91f1.sandbox171.opentlc.com'
     amqonline_app_remote_messaging_user_username: 'demo-user'
     amqonline_app_remote_messaging_user_password: 'password'
-    amqonline_app_remote_certificate_directory: '/tmp/remote'
+    amqonline_app_remote_certificate_directory: '/tmp/certs'
     # it assume that crt and key file names are same but extensions is .crt & .key
     amqonline_app_remote_certificate_file_name: 'demo-app'
   roles:
-#  - amq-online
-  - { role: server-certs, when: amqonline_state == "present" }
-#  - amq-online-app
+  - amq-online
+  - amq-online-app
